--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ MT5_PATH=C:\Program Files\MetaTrader 5\terminal64.exe
 
 
 # MT5 Symbol Settings
-MT5_DEFAULT_SUFFIX=.r
+MT5_DEFAULT_SUFFIX=
 
 # Trading Parameters
 # DEFAULT_VOLUME=0.01
