--- a/.env.example
+++ b/.env.example
@@ -4,15 +4,10 @@ MT5_PASSWORD=your-password
 MT5_SERVER=your-broker-server
 MT5_PATH=C:\Program Files\MetaTrader 5\terminal64.exe
 
-
 # MT5 Symbol Settings
-<<<<<<< HEAD
-#MT5_DEFAULT_SUFFIX= Not put anything in here / Make it from TradingView alert
-=======
->>>>>>> 4f2411c2427be0a4552acee20eabb434c0b4834b
 MT5_DEFAULT_SUFFIX=
 
-# Trading Parameters
+# Trading Parameters (optional)
 # DEFAULT_VOLUME=0.01
 # DEFAULT_STOP_LOSS=100
 # DEFAULT_TAKE_PROFIT=200
@@ -24,13 +19,10 @@ DEBUG=True
 
 # Ngrok Configuration
 NGROK_AUTH_TOKEN=your-ngrok-auth-token
-<<<<<<< HEAD
 
 # --- EMAIL ALERTS CONFIGURATION ---
-SENDER_EMAIL="your_email@gmail.com"
-SENDER_PASSWORD="YOUR_GMAIL_APP_PASSWORD"
-RECEIVER_EMAIL="your_alert_email@example.com"
-SMTP_SERVER="smtp.gmail.com"
-SMTP_PORT="587"
-=======
->>>>>>> 4f2411c2427be0a4552acee20eabb434c0b4834b
+EMAIL_HOST="smtp.gmail.com"
+EMAIL_PORT=587
+EMAIL_SENDER="your_email@gmail.com"
+EMAIL_PASSWORD="YOUR_GMAIL_APP_PASSWORD"
+EMAIL_RECIPIENT="your_alert_email@example.com"
